tests/baselines/reference/typeInferenceConflictingCandidates.errors.txt
typeInferenceConflictingCandidates.ts(3,7): error TS2345: Argument of type '3' is not assignable to parameter of type '""'.
typeInferenceConflictingCandidates.ts(3,10): error TS2856: The type of this declaration is ambiguous and may be observed as either 'string' or '""'.


==== typeInferenceConflictingCandidates.ts (2 errors) ====
    declare function g<T>(a: T, b: T, c: (t: T) => T): T;
    
    g("", 3, a => a);
          ~
!!! error TS2345: Argument of type '3' is not assignable to parameter of type '""'.
             ~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'string' or '""'.